# SubVortex.AutoUpgrader

./: .gitignore  CHANGELOG.md  Makefile  OWNERS  README.md  VERSION  check.py  cz.yaml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  redis.conf
.github/scripts/: on_release_deleted.sh  on_release_pushed.sh  on_tag_deleted.sh  on_tag_pushed.sh
.github/workflows/: docker-workflow.yml
scripts/: clean_workspace.sh  quick_clean.sh  quick_restart.sh  quick_setup.sh  quick_start.sh  quick_stop.sh
scripts/auto_upgrader/: README.md  auto_upgrade_setup.sh  auto_upgrade_start.sh  auto_upgrade_stop.sh  auto_upgrade_teardown.sh  auto_upgrader_setup.sh  auto_upgrader_start.sh  auto_upgrader_stop.sh  auto_upgrader_teardown.sh  auto_upgrader_upgrade.sh
scripts/cicd/: cicd_bump_version.py  cicd_unbump_version.py
scripts/cleaner/: clean_dumps.sh  clean_workspace.sh
scripts/docker/: docker_teardown.sh
scripts/manual_upgrader/: manual_upgrader_install.sh  manual_upgrader_upgrade.sh
scripts/miner/: README.md  quick_restart.sh  quick_start.sh  quick_stop.sh  quick_upgrade.sh
scripts/miner/metagraph/: metagraph_setup.sh  metagraph_start.sh  metagraph_stop.sh  metagraph_teardown.sh
scripts/miner/redis/: redis_setup.sh  (+3 more)
scripts/models/: main.py  requirements.txt  run.sh
scripts/os/: os_setup.sh
scripts/redis/: redis_clean.sh  redis_dump.py  redis_install.sh  redis_migration.py
scripts/utils/: utils.sh
scripts/validator/: README.md  quick_restart.sh  quick_start.sh  quick_stop.sh
scripts/wandb/: wandb_login.sh
scripts/watchtower/: README.md  watchtower_start.sh  watchtower_stop.sh  watchtower_teardown.sh
subvortex/: pyproject.toml  version.py
subvortex/auto_upgrader/: Dockerfile  README.md  cz.yaml  entrypoint.sh  env.template  pyproject.toml  requirements-dev.txt  requirements.txt
subvortex/auto_upgrader_previous/: Dockerfile  entrypoint.sh  pyproject.toml
tests/unit_tests/: conftest.py  utils.py
(+97 files in other folders)
