[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "subvortex"
version = "0.0.3-a0"
description = "SubVortex Auto Upgrader"
authors = [{ name = "Eclipse Vortex", email = "subvortex.bt@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.dynamic]
version = { attr = "subvortex.version.__version__" }


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[project.license]
text = "MIT"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["subvortex", "subvortex.auto_upgrader"]

[tool.setuptools.package-data]
"subvortex" = ["pyproject.toml"]
"subvortex.auto_upgrader" = [
    "**/*.py",
    "**/deployment/**/*",
    "**/pyproject.toml",
    "**/requirements.txt",
    "**/README.md",
    "**/env.template",
    "**/docker-compose.yml",
]

[tool.setuptools.exclude-package-data]
"subvortex" = ["**/venv/*", "**/.venv/*"]
"subvortex.auto_upgrader" = ["**/venv/*", "**/.venv/*"]